[package]
name = "plum"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "plum"

[[bin]]
name = "plum_node"
path = "src/bin/main.rs"

[dependencies]

[replace]
"cid:0.5.0" = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-cbor-and-json" }

[workspace]
members = [
  "chain",
#  "cli",
  "hashing",
  "params",
  "wallet",

  # IPFS and IPLD
  "ipfs/block",
  "ipfs/blockstore",
  "ipfs/datastore",
  "ipfs/datastore-memory",
  "ipfs/datastore-rocksdb",
  "ipld",
  "ipld/hamt",

  # Network
  "network",
  "network/p2p",
  "network/peermgr",

  # Primitives
  "primitives/address",
  "primitives/bigint",
  "primitives/bitfield",
  "primitives/bitfield/rle",
  "primitives/block",
  "primitives/bytes",
  "primitives/crypto",
  "primitives/fc",
  "primitives/hash",
  "primitives/message",
  "primitives/peerid",
  "primitives/piece",
  "primitives/sector",
  "primitives/tipset",
  "primitives/types",

  # VM
  "vm",
  "actor",

  # Tools
  "api-client/jsonrpc-client",
  "api-client"
]
