[package]
name = "plum"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "plum"

[[bin]]
name = "plum_node"
path = "src/bin/main.rs"

[dependencies]

[replace]
"cid:0.5.1" = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-cbor-and-json" }
"multihash:0.11.2" = { git = "https://github.com/PolkaX/rust-multihash", branch = "add-filecoin-code" }

[workspace]
members = [
#  "cli",
  "params",
  "wallet",

  # BlockChain
  "beacon",
  "chain",

  # IPFS and IPLD
  "ipfs/block",
  "ipfs/blockstore",
  "ipfs/datastore",
  "ipfs/datastore-memory",
  "ipfs/datastore-rocksdb",
  "ipld",

  # Network
  "network",
  "network/p2p",
  "network/peermgr",

  # Primitives
  "primitives/address",
  "primitives/bigint",
  "primitives/bitfield",
  "primitives/bitfield/rle",
  "primitives/block",
  "primitives/bytes",
  "primitives/crypto",
  "primitives/fc",
  "primitives/hash",
  "primitives/message",
  "primitives/peerid",
  "primitives/piece",
  "primitives/sector",
  "primitives/tipset",
  "primitives/types",

  # VM
  "vm",
  "vm/exitcode",
  "actor",

  # Utils
  "hashing",

  # Tools
  "api-client/jsonrpc-client",
  "api-client"
]
