[package]
name = "plum_actor"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
cid = { version = "0.5" , features = ["cbor", "json"] }
minicbor = { version = "0.4", features = ["std"] }
multihash = "0.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# plum
plum_address = { path = "../primitives/address" }
plum_bigint = { path = "../primitives/bigint" }
plum_bytes = { path = "../primitives/bytes" }
plum_bitfield = { path = "../primitives/bitfield" }
plum_crypto = { path = "../primitives/crypto" }
plum_peerid = { path = "../primitives/peerid" }
plum_piece = { path = "../primitives/piece" }
plum_sector = { path = "../primitives/sector" }
plum_types = { path = "../primitives/types" }

[dev-dependencies]
hex-literal = "0.2"
