[package]
name = "plum_api_client"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
base64 = "0.12"
cid = { version = "0.5" , features = ["cbor", "json"] }
libp2p-core = "0.20"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
jsonrpc-client = { path = "jsonrpc-client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "time"] }

# plum
plum_actor = { path = "../actor" }
plum_address = { path = "../primitives/address" }
plum_bigint = { path = "../primitives/bigint" }
plum_bitfield = { path = "../primitives/bitfield" }
plum_block = { path = "../primitives/block" }
plum_bytes = { path = "../primitives/bytes" }
plum_crypto = { path = "../primitives/crypto" }
plum_message = { path = "../primitives/message" }
plum_peerid = { path = "../primitives/peerid" }
plum_piece = { path = "../primitives/piece" }
plum_sector = { path = "../primitives/sector" }
plum_tipset = { path = "../primitives/tipset" }
plum_types = { path = "../primitives/types" }
plum_vm = { path = "../vm" }
plum-wallet = { path = "../wallet" }
