[package]
name = "plum-beacon"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"
build = "build.rs"

[build-dependencies]
protobuf-build = { version = "0.11", default-features = false, features = ["grpcio-prost-codec"] }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bls-signatures = "0.6"
futures = "0.3"
grpcio = { version = "0.6", default-features = false, features = ["openssl-vendored", "secure", "prost-codec"] }
hex = "0.4"
lazy_static = "1.4"
prost = "0.6"
protobuf = "2"
serde = { version = "1.0", features = ["derive"] }

plum_block = { path = "../primitives/block" }
plum_hash = { path = "../primitives/hash" }
plum_hashing = { path = "../hashing" }
plum_types = { path = "../primitives/types" }

#[dev-dependencies]
#tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
