[package]
name = "plum-beacon"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bls-signatures = "0.6"
hex = "0.4"
parking_lot = "0.11"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

plum_block = { path = "../primitives/block" }
plum_bytes = { path = "../primitives/bytes" }
plum_hash = { path = "../primitives/hash" }
plum-hashing = { path = "../hashing" }
plum_types = { path = "../primitives/types" }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
