[package]
name = "chain"
version = "0.1.0"
authors = ["gguoss <guanghuaguo.oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = { version = "2.1.2" }
lazy_static = { version = "1.4.0" }
cid = "*"
