[package]
name = "chain"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
lazy_static = "1.4"
data-encoding = "2.1"

cid = { package = "rust-cid", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master", features = ["serde_support"] }

plum_address = { path = "address", features = ["serde"] }
