[package]
name = "plum_chain"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
cid = { version = "0.5" , features = ["cbor", "json"] }
thiserror = "1.0"
byteorder = "1.3"

# plum
plum_crypto = { path = "../primitives/crypto" }
plum_hashing = { path = "../hashing" }
plum_types = { path = "../primitives/types" }
