[package]
name = "cli"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
log = "0.4"
atty = "0.2"
time = "0.1.42"
tokio = "0.1"
regex = "1.3.1"
libp2p = { version = "0.13" }
ansi_term = "0.12.1"
structopt = "0.3"
env_logger = "0.7.0"
exit-future = "0.1"
lazy_static = "1.4.0"

lp2p = { path = "../lp2p" }
chain = { path = "../chain" }
#wallet = { path = "../chain/wallet" }
address = { path = "../chain/address" }
