[package]
name = "cli"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
log = "0.4"
atty = "0.2"
time = "0.1.42"
tokio = "0.1"
regex = "1.3.1"
ansi_term = "0.12"
structopt = "0.3"
env_logger = "0.7"
exit-future = "0.1"
lazy_static = "1.4.0"

# plum
plum_address = { path = "../primitives/address" }
plum_chain = { path = "../chain" }
plum_libp2p = { path = "../libp2p" }
plum_network = { path = "../network" }
plum_wallet = { path = "../wallet" }
