[package]
name = "cli"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
ansi_term = "0.12"
atty = "0.2"
env_logger = "0.7"
exit-future = "0.2"
lazy_static = "1.4.0"
log = "0.4"
regex = "1.3.1"
structopt = "0.3"
time = "0.1.42"

# plum
plum_address = { path = "../primitives/address" }
plum_chain = { path = "../chain" }
plum-network = { path = "../network" }
plum-wallet = { path = "../wallet" }
