[package]
name = "plum_crypto"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
bls-signatures = "0.5"
libsecp256k1 = "0.3"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"

plum_address = { path = "../primitives/address" }
plum_hashing = { path = "../hashing" }
plum_types = { path = "../primitives/types" }

[dev-dependencies]
serde_cbor = "0.11"
serde_json = "1.0"
