[package]
name = "plum_crypto"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
bls-signatures = "0.6"
libsecp256k1 = "0.3"
minicbor = { version = "0.4", features = ["std"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

plum_address = { path = "../primitives/address" }
plum_bytes = { path = "../primitives/bytes" }
plum_hashing = { path = "../hashing" }

[dev-dependencies]
serde_json = "1.0"
