[package]
name = "plum_libp2p"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
cid = { version = "0.4", features = ["impl-serde"] }
fnv = "1.0.6"
futures = "0.3"
log = "0.4.8"
multihash = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11", features = ["tags"] }
smallvec = "1.2"

[dependencies.libp2p]
version = "0.17"
default-features = false
features = [
    "dns",
    "identify",
    "kad",
    "gossipsub",
    "mdns",
    "mplex",
    "ping",
    "secio",
    "secp256k1",
    "tcp",
    "yamux",
]
