[package]
name = "lp2p"
version = "0.1.0"
authors = ["gguoss <guanghuaguo.oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.12.0", default-features = false }
futures = "0.1"
tokio = "0.1.2"
chain = { path = "../chain" }
void = "1.0"
cid = "*"
multihash = "~0.8.0"
log = "0.4.8"
