[package]
name = "lp2p"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
libp2p = { version = "0.13", default-features = false }
futures = "0.1"
tokio = "0.1"
chain = { path = "../chain" }
void = "1.0"
cid = "0.3"
multihash = "~0.8.0"
log = "0.4"
parity-multiaddr = "0.6"
