[package]
name = "specs-storage"
version = "0.1.0"
authors = ["PolkaX <github.com/polkax>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
plum_actor = { path = "../chain/actor" }
cid = { version = "0.4", features = ["impl-serde"] }
