[package]
name = "specs-storage"
version = "0.1.0"
authors = ["PolkaX <github.com/polkax>"]
edition = "2018"

[dependencies]
cid = { version = "0.5", features = ["impl-serde"] }

# plum
plum_piece = { path = "../primitives/piece" }
plum_sector = { path = "../primitives/sector" }
plum_types = { path = "../primitives/types" }
