[package]
name = "wallet"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
serde_json = "1.0"
parking_lot = "0.9"
hex = "0.4.0"
thiserror = "1.0"
bls = { package = "bls-signatures", version = "0.3" }
libsecp256k1 = "0.3"

address = { path = "../address" }

[dev-dependencies]
tempfile = "3.1"
