[package]
name = "plum_wallet"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
bls = { package = "bls-signatures", version = "0.5" }
libsecp256k1 = "0.3"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"

plum_address = { path = "../primitives/address" }
plum_crypto = { path = "../crypto" }

[dev-dependencies]
tempfile = "3.1"
