[package]
name = "plum_wallet"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
bls-signatures = "0.6"
libsecp256k1 = "0.3"
parking_lot = "0.11"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# plum
plum_address = { path = "../primitives/address" }
plum_bytes = { path = "../primitives/bytes" }
plum_crypto = { path = "../primitives/crypto" }
