[package]
name = "abi"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_tuple = "0.4"
serde_repr = "0.1"
primitive-types = "0.6"
enum-repr-derive = "0.1.3"

cid = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-cid", branch = "filecoin-master", features = ["serde_support"] }

types = { path = "../types" }
plum_bigint = { path = "../../primitives/bigint" }
codec-rle = { path = "../../codec/rle" }
serde-support = { package = "codec-serde-support", path = "../../codec/serde-support" }

[dev-dependencies]
serde_cbor = "0.11"