[package]
name = "types"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
log = "0.4"
cid = { package = "rust-cid", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master", features = ["serde_support"] }
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
byteorder = "1"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_tuple = "0.4"
block_format = { package = "rust-block-format", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }
unsigned-varint = "0.3"

plum_address = { path = "../../primitives/address" }
plum_bigint = { path = "../../primitives/bigint" }

[dev-dependencies]
serde_json = "1"