[package]
name = "types"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
bytes = "0.5"
byteorder = "1"
cid = { version = "0.4", features = ["impl-serde"] }
log = "0.4"
multihash = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_tuple = "0.4"
thiserror = "1.0"
unsigned-varint = "0.3"

block_format = { package = "rust-block-format", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }

plum_address = { path = "../../primitives/address" }
plum_bigint = { path = "../../primitives/bigint" }

[dev-dependencies]
serde_json = "1"
