[package]
name = "wallet"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
blake2-rfc = "0.2"
rand = "0.7"
bls = { package = "bls-signatures", version = "0.3" }
libsecp256k1 = "0.3"

address = { path = "../address" }
types = { path = "../types" }

[dev-dependencies]
tempfile = "3.1"
