[package]
name = "ipfs-bitswap"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"
build = "build.rs"

[build-dependencies]
prost-build = "0.6"

[dependencies]
async-trait = "0.1"
cid = { version = "0.5" , features = ["cbor", "json"] }
multihash = "0.11"
prost = "0.6"
libp2p = { version = "0.22", default-features = false, features = ["request-response"] }
thiserror = "1.0"
unsigned-varint = "0.3"

ipfs-block = { path = "../block" }
ipld = { path = "../../ipld" }

[dev-dependencies]
