[package]
name = "ipfs-datastore"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
log = "0.4"
parking_lot = "0.11"
path-clean = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"
