[package]
name = "ipld-amt"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
cid = { version = "0.5", features = ["cbor", "json"] }
minicbor = { version = "0.4", features = ["std"] }

ipfs-block = { path = "../../ipfs/block" }
ipfs-blockstore = { path = "../../ipfs/blockstore" }
ipld = { path = "../" }
