[package]
name = "ipld-hamt"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
cid = { version = "0.5" , features = ["cbor", "json"] }
multihash = "0.11"
murmur3 = "0.5"
uint = "0.8"

minicbor = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }

ipfs-blockstore = { path = "../../ipfs/blockstore" }
ipld = { path = ".." }
